<resources>
    <string name="app_name">CalcMyTip</string>
    <string name="calcTip">Calc My Tip App</string>
    <string name="restname">Restaurant name:</string>
    <string name="city">City:</string>
    <string name="next">Next</string>
    <string name="rateKindness">How Wold You Rate the Waiter?</string>
    <string name="amount">Bill:</string>
    <string name="tip">Max Tip %</string>
    <string name="check">Please Rate Serving Times:</string>
    <string name="meal">All Courses arrived on time</string>
    <string name="meal3">All Main Courses arrived at the same time</string>
    <string name="meal5">All Courses arrived less then 30 minutes from order time</string>
    <string name="meal6">All Courses were tasty and as promised</string>
    <string name="atmosphere">Rank restaurant\'s atmosphere</string>
    <string name="pleasing">Very pleasing</string>
    <string name="average">Average</string>
    <string name="notgood">Not good at all</string>
    <string name="billenter">Enter Bill:</string>
    <string name="scroll">Scroll down for bonus</string>
    <string name="tip2">Tip:</string>
    <string name="totalam">Total amount is:</string>
    <string name="pay">Pay</string>
    <string name="calcBill">Calculate Bill</string>
    <string name="paidTo">Snding Payment To:</string>
    <string name="home">Home</string>
    <string name="waiter_rate">Waiter Rate</string>
    <string name="serving_rate">Serving Rate</string>
    <string name="atmosphere_rate">Atmosphere Rate</string>
    <string name="location">Search Restaurant</string>
</resources>
